[project]
name = "agent-template"
version = "0.1.0"
description = "Example demonstrating the ComputerAgent with OpenAI CUA and Cloud VM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cua-agent",
    "cua-computer",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "utils.py"]
